[gd_scene load_steps=6 format=3 uid="uid://beyk7h8y36i5p"]

[ext_resource type="Script" path="res://Scripts/settingGUI.gd" id="1_2bu1r"]
[ext_resource type="FontFile" uid="uid://ced4mfo27hta2" path="res://Assets/font/BOMBERMA.TTF" id="2_052nq"]
[ext_resource type="Texture2D" uid="uid://bfxrrc32funtk" path="res://Assets/Environment/setting.svg" id="2_l7i1i"]

[sub_resource type="Gradient" id="Gradient_x1070"]
offsets = PackedFloat32Array(0.116883, 0.915584)
colors = PackedColorArray(0.160784, 0.309804, 0.388235, 1, 0.12549, 0.247059, 0.313726, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rlsce"]
gradient = SubResource("Gradient_x1070")

[node name="SettingGUI" type="Control"]
z_index = 50
layout_mode = 3
anchors_preset = 0
offset_top = -192.0
offset_right = 8.0
offset_bottom = -184.0
script = ExtResource("1_2bu1r")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 192.0
offset_right = 576.0
offset_bottom = 768.0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 77.0
offset_top = 584.0
offset_right = 495.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = SubResource("GradientTexture1D_rlsce")

[node name="LabelPause" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -219.0
offset_right = 119.0
offset_bottom = -169.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_052nq")
theme_override_font_sizes/font_size = 44
text = "Game Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -71.0
offset_right = 192.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/separation = 36
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Retry" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_052nq")
theme_override_font_sizes/font_size = 24
text = "Retry"

[node name="GoToMainMenu" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_052nq")
theme_override_font_sizes/font_size = 24
text = "Main Menu
"

[node name="SettingButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 192.0
offset_right = 576.0
offset_bottom = 256.0
texture_normal = ExtResource("2_l7i1i")

[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/GoToMainMenu" to="." method="_on_go_to_main_menu_pressed"]
[connection signal="pressed" from="SettingButton" to="." method="_on_setting_button_pressed"]
